bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:3: error: value or is not a member of Boolean
  if (Math.abs(100-n)<11 or Math.abs(200-n)<11){
                         ^